--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "loading animation",
     "animation"
   ],
-  "version": "1.0.2",
+  "version": "1.0.3",
   "bugs": "https://github.com/javadbat/jb-loading-react/issues",
   "license": "MIT",
   "files": [
@@ -23,6 +23,10 @@
     "lib/",
     "dist/"
   ],
+  "exports": {
+    "import": "./index.js",
+    "require": "./index.cjs"
+  },
   "main": "index.js",
   "types": "./dist/JBLoading.d.ts",
   "repository": {
