--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "loading animation",
     "animation"
   ],
-  "version": "1.0.3",
+  "version": "1.0.4",
   "bugs": "https://github.com/javadbat/jb-loading-react/issues",
   "license": "MIT",
   "files": [
@@ -28,7 +28,7 @@
     "require": "./index.cjs"
   },
   "main": "index.js",
-  "types": "./dist/JBLoading.d.ts",
+  "types": "./dist/react-component/jb-loading/lib/JBLoading.d.ts",
   "repository": {
 		"type": "git",
 		"url": "git@github.com:javadbat/jb-loading-react.git"
